--- a/site/index.html
+++ b/site/index.html
@@ -334,6 +334,7 @@
 <li><a href="opcodes/accum.html">accum</a>: Simple accumulator of scalar values</li>
 <li><a href="opcodes/atstop.html">atstop</a>: Schedule an instrument at the end of the current instrument</li>
 <li><a href="opcodes/crackle.html">crackle</a>: generates noise based on a chaotic equation</li>
+<li><a href="opcodes/defer.html">defer</a>: Run an opcode at the end of an event</li>
 <li><a href="opcodes/deref.html">deref</a>: Dereference a previously created reference to a variable</li>
 <li><a href="opcodes/diode_ringmod.html">diode_ringmod</a>: A ring modulator with optional non-linearities</li>
 <li><a href="opcodes/file_exists.html">file_exists</a>: Returns 1 if a file exists and can be read</li>
@@ -452,5 +453,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-05-09 00:09:24
+Build Date UTC : 2020-05-09 22:31:26
 -->
